@@ -4,6 +4,9 @@ Changelog
 3.1a2 - unreleased
 ------------------
 
+- Added tests for I18NOrderedBaseFolder.
+  [hannosch]
+
 - Some PEP8 cleanup.
   [hannosch]
 
